springer template started

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,14 @@
 *.fls
 *.out
 *.toc
-
+*~
 ## Intermediate documents:
 *.dvi
 *-converted-to.*
 # these rules might exclude image files for figures etc.
-# *.ps
-# *.eps
-# *.pdf
+*.ps
+*.eps
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
